<resources>
    <string name="app_name" translatable="false">NeatShoe</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>

    <string name="menu_home" translatable="false">Home</string>
    <string name="menu_gallery" translatable="false">Gallery</string>
    <string name="menu_slideshow" translatable="false">Slideshow</string>

    <string name="save" translatable="false">Save Profile</string>
    <string name="edit" translatable="false">Edit Profile</string>
    <string name="full_name" translatable="false">Chris Hemsworth</string>
    <string name="back_to_home" translatable="false">Back to\nHome</string>
    <string name="name_title" translatable="false">Name</string>
    <string name="username" translatable="false">"@chris_hemsworth"</string>
    <string name="phone_title" translatable="false">Phone</string>
    <string name="phone" translatable="false">+60101234567</string>
    <string name="address_title" translatable="false">Address</string>
    <string name="address" translatable="false">City, Street</string>
    <string name="email_title" translatable="false">Email</string>
    <string name="email" translatable="false">abc@gmail.com</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="save_profile">Save Profile</string>
    <string name="point">Point</string>
    <string name="points">10000</string>
    <string name="latitude">Latitude</string>
    <string name="longtitude">Longtitude</string>
    <string name="update">Update</string>
    <string name="title_activity_location">Map</string>
    <string name="longitude">longtitude</string>
    <string name="title_activity_test">test</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_map">Map</string>

    <string-array name="quantity_string_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5(Max)</item>
    </string-array>
</resources>