<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".Profile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:background="@drawable/bg_top">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profileImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="40dp"
            android:src="@drawable/sample" />

        <TextView
            android:id="@+id/Name"
            style="@style/TextName"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            android:text="@string/full_name" />

    </LinearLayout>

        <Button
            android:id="@+id/edit"
            style="@style/TextButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="80dp"
            android:layout_marginTop="-26dp"
            android:layout_marginEnd="80dp"
            android:background="@drawable/bg_button_oval"
            android:text="@string/edit_profile" />

        <Button
            android:id="@+id/save"
            style="@style/TextButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="80dp"
            android:layout_marginTop="-26dp"
            android:layout_marginEnd="80dp"
            android:background="@drawable/bg_button_oval"
            android:text="@string/save_profile" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.6"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/nameBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="14dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="10dp"
                android:src="@drawable/ic_profile"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/name_title"
                    style="@style/TextBlackTitle"/>

                <EditText
                    android:id="@+id/profileName"
                    style="@style/TextDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/full_name" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="14dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="4dp"
                android:layout_marginEnd="10dp"
                android:src="@drawable/ic_phone"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/phone_title"
                    style="@style/TextBlackTitle"/>

                <EditText
                    android:id="@+id/profilePhone"
                    style="@style/TextDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/phone" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="14dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="4dp"
                android:layout_marginEnd="10dp"
                android:src="@drawable/ic_email_orange"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/email_title"
                    style="@style/TextBlackTitle"/>

                <EditText
                    android:id="@+id/profileEmail"
                    style="@style/TextDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/email" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="14dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="4dp"
                android:layout_marginEnd="10dp"
                android:src="@drawable/ic_address"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/address_title"
                    style="@style/TextBlackTitle"/>

                <EditText
                    android:id="@+id/profileAddress"
                    style="@style/TextDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/address" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="14dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="4dp"
                android:layout_marginEnd="10dp"
                android:src="@drawable/ic_point"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/point"
                    style="@style/TextBlackTitle"/>

                <EditText
                    android:id="@+id/profilePoint"
                    style="@style/TextDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/points" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
</ScrollView>